cluster/apps/infrastructure/mailserver/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mailserver
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
