cluster/apps/infrastructure/mailserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailserver
  namespace: mailserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mailserver
  template:
    metadata:
      labels:
        app: mailserver
        role: mail
        tier: backend
    spec:
      containers:
        - name: mailserver
          image: mailserver/docker-mailserver:11.1.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
            privileged: false
            capabilities:
              add:
                # file permission capabilities
                - CHOWN
                - FOWNER
                - MKNOD
                - SETGID
                - SETUID
                - DAC_OVERRIDE
                # network capabilities
                - NET_ADMIN  # needed for F2B
                - NET_RAW    # needed for F2B
                - NET_BIND_SERVICE
                # miscellaneous  capabilities
                - SYS_CHROOT
                - SYS_PTRACE
                - KILL
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: 2Gi
              cpu: 1500m
            requests:
              memory: 250Mi
              cpu: 50m
          volumeMounts:
            - name: config
              subPath: postfix-accounts.cf
              mountPath: /tmp/docker-mailserver/postfix-accounts.cf
              readOnly: true
            - name: config
              subPath: postfix-main.cf
              mountPath: /tmp/docker-mailserver/postfix-main.cf
              readOnly: true
            - name: config
              subPath: postfix-virtual.cf
              mountPath: /tmp/docker-mailserver/postfix-virtual.cf
              readOnly: true
            - name: config
              subPath: fetchmail.cf
              mountPath: /tmp/docker-mailserver/fetchmail.cf
              readOnly: true
            - name: config
              subPath: dovecot.cf
              mountPath: /tmp/docker-mailserver/dovecot.cf
              readOnly: true
          #- name: config
          #  subPath: user1.sko.ai.dovecot.sieve
          #  mountPath: /tmp/docker-mailserver/user1@sko.ai.dovecot.sieve
          #  readOnly: true
          #- name: tmp-files
          #  subPath: user-patches.sh
          #  mountPath: /tmp/docker-mailserver/user-patches.sh
            - name: config
              subPath: SigningTable
              mountPath: /tmp/docker-mailserver/opendkim/SigningTable
              readOnly: true
            - name: config
              subPath: KeyTable
              mountPath: /tmp/docker-mailserver/opendkim/KeyTable
              readOnly: true
            - name: config
              subPath: TrustedHosts
              mountPath: /tmp/docker-mailserver/opendkim/TrustedHosts
              readOnly: true
            - name: opendkim-keys
              mountPath: /tmp/docker-mailserver/opendkim/keys
              readOnly: true
            - name: data
              mountPath: /var/mail
              subPath: data
            - name: data
              mountPath: /var/mail-state
              subPath: state
            - name: data
              mountPath: /var/log/mail
              subPath: log
            - name: tls
              mountPath: /etc/ssl/mailserver
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - name: smtp
              containerPort: 25
              protocol: TCP
            - name: smtp-secure
              containerPort: 465
              protocol: TCP
            - name: smtp-auth
              containerPort: 587
            - name: imap
              containerPort: 143
              protocol: TCP
            - name: imap-secure
              containerPort: 993
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: mailserver.config
        - name: opendkim-keys
          secret:
            secretName: mailserver.opendkim.keys
        - name: data
          persistentVolumeClaim:
            claimName: mail-storage-data-v3
        - name: tmp-files
          emptyDir: {}
        - name: tls
          secret:
            secretName: mail-cert
