cluster/apps/infrastructure/mailserver/ingress.yaml
---
# All this does is  grab a certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailserver
  namespace: mailserver
  annotations:
    kubernetes.io/ingress.class: internal
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: mail.greyrock.io
      http:
        paths:
          - backend:
              service:
                name: http-echo
                port:
                  number: 80
            path: /mailserver
            pathType: Prefix
  tls:
    - hosts:
        - mail.greyrock.io
      secretName: mail-cert
